--- a/hw-js-05/package.json
+++ b/hw-js-05/package.json
@@ -10,6 +10,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.3.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.17.1"
